# tiny-rag-agent

./: .cursorrules  .env.example  LICENSE  Readme.md  TODO.md  pyproject.toml
scripts/: check_env.py  test_ingestion.py
src/tiny_llm/: attention.py  basics.py  embedding.py  layer_norm.py  positional_encoding.py  qwen2_week1.py
src/tiny_rag_agent/: __init__.py
src/tiny_rag_agent/cli/: main.py
src/tiny_rag_agent/config/: __init__.py  settings.py
src/tiny_rag_agent/graph/: __init__.py  chains.py  nodes.py  state.py  workflow.py
src/tiny_rag_agent/ingestion/: chunker.py  loader.py  schema.py
src/tiny_rag_agent/retrieval/: __init__.py  hybrid.py  keyword_store.py  vector_store.py
